feat: add user api and repository
